[tool.poetry]
name = "chatterbox-tts"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
license = "MIT"
authors = ["resemble-ai <engineering@resemble.ai>"]
homepage = "https://github.com/resemble-ai/chatterbox"
repository = "https://github.com/resemble-ai/chatterbox"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26.4"
librosa = "0.11.0"
s3tokenizer = "*"
torch = {version = "2.5.1+cu118", source = "pytorch-cu118"}
torchaudio = {version = "2.5.1+cu118", source = "pytorch-cu118"}
transformers = "4.46.3"
diffusers = "0.29.0"
resemble-perth = "1.0.1"
conformer = "0.3.2"
safetensors = "0.5.3"
spacy-pkuseg = "*"
pykakasi = "2.3.0"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
